--- a/src/test/resources/projectdata.properties
+++ b/src/test/resources/projectdata.properties
@@ -1,5 +1,5 @@
 #
-#Wed Dec 25 01:24:50 IST 2024
+#Wed Dec 25 04:57:14 IST 2024
 accountLogoutPageHeading=Account Logout
 accountLogoutPageTitle=Account Logout
 accountLogoutPageURL=https\://tutorialsninja.com/demo/index.php?route\=account/logout
@@ -10,6 +10,7 @@ browserName=chrome
 existingEmail=amotooricap1@gmail.com
 existingProduct=HP
 existingSampleEmailTwo=amotooricap8@gmail.com
+exitingProuductInSubCategory=iMac
 firstName=Arun
 inactiveEmail=amotooricap123454321@gmail.com
 invalidEmailFour=amotoori@gmail.
@@ -30,8 +31,9 @@ registerPageHeadingTwo=Returning Customer
 registerPageTitle=Register Account
 registerPageURL=https\://tutorialsninja.com/demo/index.php?route\=account/register
 samplePassword=xyzabc
-samplePasswordTwo=12345
+samplePasswordTwo=11111
 searchTermResultMultipleProducts=Mac
 telephoneNumber=1234567890
+termInProductDescription=iLife
 validPassword=12345
-validPasswordTwo=11111
+validPasswordTwo=12345
