TC 19 Search Completed

--- a/src/test/resources/projectdata.properties
+++ b/src/test/resources/projectdata.properties
@@ -11,6 +11,7 @@ existingEmail=amotooricap1@gmail.com
 existingProduct=HP
 existingSampleEmailTwo=amotooricap8@gmail.com
 exitingProuductInSubCategory=iMac
+existingSampleTermResultingInMultipleProducts=Mac
 firstName=Arun
 inactiveEmail=amotooricap123454321@gmail.com
 invalidEmailFour=amotoori@gmail.
@@ -37,3 +38,7 @@ telephoneNumber=1234567890
 termInProductDescription=iLife
 validPassword=12345
 validPasswordTwo=12345
+sortOptionOne=Name (A - Z)
+sortOptionTwo=Name (Z - A)
+sortOptionThree=Price (Low > High)
+sortOptionFour=Price (High > Low)
